<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/helpscreen_background"
    >

    <TextView
        android:id="@+id/helpGame_title"
        android:layout_width="220dp"
        android:layout_height="37dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="4dp"
        android:text="@string/helpTitle"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/helpAbout"
        android:layout_width="637dp"
        android:layout_height="74dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="40dp"
        android:text="@string/helpDesc"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/helpAuthor_Title"
        android:layout_width="180dp"
        android:layout_height="37dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="128dp"
        android:text="@string/helpTitle2"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/helpAuthors_about"
        android:layout_width="637dp"
        android:layout_height="66dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="164dp"
        android:text="@string/helpDesc2"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/helpCourseLink_Title"
        android:layout_width="260dp"
        android:layout_height="37dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="236dp"
        android:text="@string/helpTitle3"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/helpHyperLink"
        android:layout_width="400dp"
        android:layout_height="60dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="276dp"
        android:text="@string/Pagelink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>