<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp">

    <ImageView
        android:id="@+id/popperEmoji"
        android:layout_width="57dp"
        android:layout_height="52dp"
        android:layout_marginStart="348dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/popper_emoji"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/party_popper" />

    <TextView
        android:id="@+id/congratText"
        android:layout_width="284dp"
        android:layout_height="33dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="4dp"
        android:text="@string/congratulations_you_won"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/statisticsText"
        android:layout_width="285dp"
        android:layout_height="48dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="36dp"
        android:text="@string/statistics"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/happyEmoji"
        android:layout_width="61dp"
        android:layout_height="56dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/happy_emoji"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/happy_emoji"
        tools:ignore="ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>