<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/options_background">

    <ListView
        android:id="@+id/listGamesPlayed"
        android:layout_width="351dp"
        android:layout_height="229dp"
        android:layout_marginStart="332dp"
        android:layout_marginTop="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonResetTimesPlayes"
        android:layout_width="273dp"
        android:layout_height="48dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="264dp"
        android:text="@string/reset_games_played"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerNumBombs"
        android:layout_width="269dp"
        android:layout_height="48dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="204dp"
        android:contentDescription="@string/options"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textBoardSize"
        android:layout_width="211dp"
        android:layout_height="30dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="44dp"
        android:text="@string/board_size"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textBestScore"
        android:layout_width="211dp"
        android:layout_height="30dp"
        android:layout_marginStart="332dp"
        android:layout_marginTop="44dp"
        android:text="@string/best_scores"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerBoardSize"
        android:layout_width="267dp"
        android:layout_height="48dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/number_of_bombs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textNumBombs"
        android:layout_width="211dp"
        android:layout_height="30dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="164dp"
        android:text="@string/number_of_bombs"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>