<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/gamemodule_background">

    <TextView
        android:id="@+id/bestScoreText"
        android:layout_width="400dp"
        android:layout_height="28dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="376dp"
        android:text="@string/best_score"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timesPlayedText"
        android:layout_width="163dp"
        android:layout_height="28dp"
        android:layout_marginStart="552dp"
        android:layout_marginTop="376dp"
        android:text="@string/times_played"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/numRemainingBombsText"
        android:layout_width="148dp"
        android:layout_height="25dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/foundText"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="48dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:text="@string/back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/foundText"
        android:layout_width="62dp"
        android:layout_height="27dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="8dp"
        android:text="@string/found"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableForButtons"
        android:layout_width="697dp"
        android:layout_height="324dp"
        android:layout_below="@+id/foundText"
        android:layout_alignStart="@+id/foundText"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:stretchColumns="*"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foundText"
        app:layout_constraintVertical_bias="0.0">

    </TableLayout>

    <TextView
        android:id="@+id/scansUsedText"
        android:layout_width="156dp"
        android:layout_height="26dp"
        android:layout_marginStart="556dp"
        android:layout_marginTop="8dp"
        android:text="@string/scans_used"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>